Add more repositories

--- a/configuration/config.json
+++ b/configuration/config.json
@@ -34,13 +34,37 @@
     {
       "name": "Travis",
       "configuration": {
+        "slug": "osism/docker-ceph-container"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/docker-cephclient"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
         "slug": "osism/docker-cobbler"
       }
     },
     {
       "name": "Travis",
       "configuration": {
+        "slug": "osism/docker-installer"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
         "slug": "osism/docker-kolla-ansible"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/docker-openstackclient"
       }
     },
     {
@@ -64,13 +88,31 @@
     {
       "name": "Travis",
       "configuration": {
+        "slug": "osism/ansible-cockpit"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
         "slug": "osism/ansible-common"
       }
     },
     {
       "name": "Travis",
       "configuration": {
+        "slug": "osism/ansible-configuration"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
         "slug": "osism/ansible-docker"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-helper"
       }
     },
     {
@@ -88,7 +130,31 @@
     {
       "name": "Travis",
       "configuration": {
+        "slug": "osism/ansible-manager"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-mirror"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
         "slug": "osism/ansible-netdata"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-network-interfaces"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-operator"
       }
     },
     {
@@ -100,7 +166,67 @@
     {
       "name": "Travis",
       "configuration": {
+        "slug": "osism/ansible-prometheus"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-prometheus-exporter"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-proxy"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-repository"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/ansible-resolvconf"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
         "slug": "osism/ansible-template"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/documentation"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/osism-ansible"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/cfg-master"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/travis-trigger"
+      }
+    },
+    {
+      "name": "Travis",
+      "configuration": {
+        "slug": "osism/release"
       }
     }
   ]
